# 21016-1TSANationalsSoftwareSubmission

./: agricultural_metrics.db  app.py  eco_impact.py  pyproject.toml
.streamlit/: config.toml
attached_assets/: Pasted-TypeError-not-supported-between-instances-of-str-and-datetime-datetime-Traceback-File-h-1747098602444.txt
data/: sample_data.py
